Fixes work & contact on mobile

--- a/src/App.sass
+++ b/src/App.sass
@@ -29,7 +29,7 @@ button
     background-color: #ebc17d
 
   &:disabled
-    background-color: #4d4e53  
+    background-color: #4d4e53
 
 h1, h2, h3, h4, h5, h6
   font-weight: normal
@@ -55,7 +55,8 @@ section
   margin: 0 auto
   max-width: 1000px
   overflow: auto
-  padding: 50px 0
+  padding: 50px 20px
+
 
 textarea
   display: block
