--- a/src/components/contact/Contact.sass
+++ b/src/components/contact/Contact.sass
@@ -4,7 +4,7 @@
   font-size: 18.77px
 
   form
-    max-width: 50%
+    max-width: 500px
     margin: 0 auto
 
   h2
