--- a/src/components/me/Me.sass
+++ b/src/components/me/Me.sass
@@ -17,4 +17,4 @@
     border-radius: 50%
 
   section
-    padding: 150px 0
+    padding: 150px 20px
